--- a/blog_project/templates/home.html
+++ b/blog_project/templates/home.html
@@ -4,7 +4,8 @@
     {% for post in object_list %}
         <div class="post-entery">
             <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-                <img src="{{ post.img }}" >
+            <img src="{{ post.img.url }}" style ="width:500px; height:600px;" >
+            <p>{{ post.sex_k }}</p>
             <p>{{ post.body }}</p>
         </div>
     {% endfor %}
