--- a/blog_project/templates/post_detail.html
+++ b/blog_project/templates/post_detail.html
@@ -3,7 +3,8 @@
 {% block content %}
     <div class ="post-entery">
         <h2>{{ object.title }}</h2>
-        <img src = "{{ object.img }}">
+        <img src="{{ post.img.url }}" style ="width:500px; height:600px;" >
+        <p>{{ object.sex_k }}</p>
         <p>{{ object.body }}</p>
         
     </div>
@@ -11,3 +12,5 @@
     <p><a href ="{% url 'post_edit' post.pk %}">Изменить объявление</a></p>
     <p><a href ="{% url 'post_delete' post.pk %}">Удалить объявление</a></p>
 {% endblock content %}
+
+
