--- a/blog_project/templates/post_new.html
+++ b/blog_project/templates/post_new.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>Добавить объявление</h1>
-    <form action ="" method ="post">{% csrf_token %}
+    <form action ="" enctype="multipart/form-data" method ="post">{% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value ="Создать">
     </form>
