--- a/blog_project/templates/base.html
+++ b/blog_project/templates/base.html
@@ -3,23 +3,37 @@
 
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кошачья Империя</title>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400"
-    rel="stylesheet">
-    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   </head>
   <body>
-    <div>
-      <header>
-        <div class="nav-left">
-          <h1><a href="{% url 'home' %}">Кошачья Империя</a></h1>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-warning">    
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'home' %}"><h1>Кошачья Империя</h1></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" href="{% url 'about' %}"><h3>О нас</h3></a>
+              <a class="nav-link active ms-auto" href="{% url 'post_new' %}"><h3>Добавить объявление</h3></a>
+            </div>
+          </div>
         </div>
-        <div class="nav-right">
-          <a href="{% url 'post_new' %}">Добавить объявление</a>
-        </div>
-      </header>
+      </nav>
+    </header>
+    <main> 
       {% block content %}
       {% endblock content %}
-    </div>
+    </main>
+   
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
