--- a/blog_project/templates/post_edit.html
+++ b/blog_project/templates/post_edit.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Изменить объявление</h1>
-    <form action="" method="post">{% csrf_token %}
-      {{ form.as_p }}
+{% load crispy_forms_tags %}
+<div class="container">
+  <h1>Изменить объявление</h1>
+  <form action="" method="post">{% csrf_token %}
+    {{ form|crispy }}
     <input type="submit" value="Изменить" />
-</form>
+  </form>
+</div>
 {% endblock content %}
