--- a/blog_project/templates/about.html
+++ b/blog_project/templates/about.html
@@ -1,4 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<p></p>
+<div class="container ">
+    <div class="container ">
+        <h1> Онлайн приют для кошек</h1>
+        <p></p>
+    </div>
+
+    <h3>Цель деятельности Приюта для бездомных животных "Кошачья Империя" определяется нами как формирование в обществе гуманного отношения к окружающему миру. Для достижения поставленной цели мы разрабатываем и проводим конкретные мероприятия по приему и содержанию животных в надлежащих условиях.</h3>
+    <p></p>
+    <h3>Контакты: 89065583030</h3> 
+    <h3>Москва, Парковый проезд, д.2</h3>
+    
+</div>
 {% endblock content %}
