--- a/blog_project/templates/home.html
+++ b/blog_project/templates/home.html
@@ -3,24 +3,25 @@
 {% block content %}
 <p></p>    
 <form action="{% url 'home' %}" method="get" id="sortProduct">
-        <h5>
-            <span>Отфильтровать по полу:</span>
-            <span><input value="По умолчанию" name="filter" type="submit"></span>
-            <span><input type="submit" name="filter" value="Женский"></span>
-            <span><input type="submit" name="filter" value="Мужской"></span>
-        </h5>
-    </form>
+    <h5>
+        <span>Отфильтровать по полу:</span>
+        <span><input value="По умолчанию" name="filter" type="submit"></span>
+        <span><input type="submit" name="filter" value="Женский"></span>
+        <span><input type="submit" name="filter" value="Мужской"></span>
+    </h5> 
+</form>       
     <div class="card-columns">    
         {% for post in object_list %}
-            <div class="card text-center">
-                <div class="post-entery">
-                    <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-                    <img src="{{ post.img.url }}" style ="width:492px; height:600px;" >
-                    <p>Пол: {{ post.sex_k }}</p>
-                    <p>Описание:</p>
-                    <p>{{ post.body }}</p>
+            <div class="card" style="width: 30rem;">
+                <img src="{{ post.img.url }}" class="card-img-top img-fluid" style =" height:500px;">
+                <div class="card-body">
+                    <h2 class="card-title">{{ post.title }}</h2>
+                    <p class="card-text">Пол: {{ post.sex_k }}</p>
+                    <p class="card-text">Описание:</p>
+                    <p class="card-text">{{ post.body }}</p>
+                    <a href="{% url 'post_detail' post.pk %}" class="btn btn-warning">Подробнее</a>
                 </div>
-            </div>
+            </div>   
         {% endfor %}
     </div>
 {% endblock content %}
