fixed bug with buttons

--- a/blog_project/templates/home.html
+++ b/blog_project/templates/home.html
@@ -5,9 +5,9 @@
 <form action="{% url 'home' %}" method="get" id="sortProduct">
     <h5>
         <span>Отфильтровать по полу:</span>
-        <span><input value="По умолчанию" name="filter" type="submit"></span>
-        <span><input type="submit" name="filter" value="Женский"></span>
-        <span><input type="submit" name="filter" value="Мужской"></span>
+        <span><input value="По умолчанию" class="btn btn-warning" name="filter" type="submit"></span>
+        <span><input type="submit" name="filter" class="btn btn-warning" value="Женский"></span>
+        <span><input type="submit" name="filter" class="btn btn-warning" value="Мужской"></span>
     </h5> 
 </form>       
     <div class="card-columns">    
