--- a/blog_project/templates/post_detail.html
+++ b/blog_project/templates/post_detail.html
@@ -11,8 +11,8 @@
         <p>{{ object.body }}</p>
     </div>
     <span>
-        <button type="button" class="btn btn-warning" href ="{% url 'post_edit' post.pk %}">Изменить объявление</button>
-        <button type="button" class="btn btn-warning" href ="{% url 'post_delete' post.pk %}">Удалить объявление</button>
+        <a href="{% url 'post_edit' post.pk %}" class="btn btn-warning">Изменить объявление</a>
+        <a href="{% url 'post_delete' post.pk %}" class="btn btn-warning">Удалить объявление</a>
     </span>
     <p></p>
 </div>
